[package]
name = "ppb"
version = "0.8.1"
edition = "2021"
authors = ["n01e0 <reoshiseki@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/n01e0/ppb"
description = "postpone bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version="4.5.7", features=["derive"] }
grep = "0.3.1"
ignore = "0.4.22"
rayon = "1.10.0"
octocrab = "0.38.0"
serde = { version="1.0.203", features=["derive"] }
strfmt = "0.2.4"
serde_yaml = "0.9.34"
# TODO thiserror使う
#thiserror = "1.0.50"
tokio = { version="1.39.2", features=["macros", "rt-multi-thread"] }
jwalk = "0.8.1"
